--- a/DotNetMentor.PageMonitor.WebApi/appsettings.Development.json
+++ b/DotNetMentor.PageMonitor.WebApi/appsettings.Development.json
@@ -1,8 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        // "Microsoft" : "Information",
+        // "Microsoft.EntityFrameworkCore.Database": "Information",
+      }
+    },
+    "WriteTo": [
+      "Console"
+    ]
   }
 }
