--- a/DotNetMentor.PageMonitor.Application/DotNetMentor.PageMonitor.Application.csproj
+++ b/DotNetMentor.PageMonitor.Application/DotNetMentor.PageMonitor.Application.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.17" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DotNetMentor.PageMonitor.Domain\DotNetMentor.PageMonitor.Domain.csproj" />
