--- a/DotNetMentor.PageMonitor.WebApi/DotNetMentor.PageMonitor.WebApi.csproj
+++ b/DotNetMentor.PageMonitor.WebApi/DotNetMentor.PageMonitor.WebApi.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.17" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
   </ItemGroup>
