Dodanie konfiguracji pliku lokalnego

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/DotNetMentor.PageMonitor.WebApi/appsettings.Development.local.json
