--- a/DotNetMentor.PageMonitor.Application/DotNetMentor.PageMonitor.Application.csproj
+++ b/DotNetMentor.PageMonitor.Application/DotNetMentor.PageMonitor.Application.csproj
@@ -7,11 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.17" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DotNetMentor.PageMonitor.Domain\DotNetMentor.PageMonitor.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
