--- a/DotNetMentor.PageMonitor.Application/DotNetMentor.PageMonitor.Application.csproj
+++ b/DotNetMentor.PageMonitor.Application/DotNetMentor.PageMonitor.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EFCoreSecondLevelCacheInterceptor" Version="4.2.3" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.17" />
   </ItemGroup>
