--- a/DotNetMentor.PageMonitor.WebApi/appsettings.Development.json
+++ b/DotNetMentor.PageMonitor.WebApi/appsettings.Development.json
@@ -19,5 +19,9 @@
     "Secret": "",
     "Issuer": "https://example.com",
     "Audience": "https://example.com"
+  },
+
+  "CookieSettings" : {
+    "Secure": false
   }
 }
