--- a/DotNetMentor.PageMonitor.Infrastracture/DotNetMentor.PageMonitor.Infrastracture.csproj
+++ b/DotNetMentor.PageMonitor.Infrastracture/DotNetMentor.PageMonitor.Infrastracture.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="EFCoreSecondLevelCacheInterceptor" Version="4.2.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.17" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.17" />
   </ItemGroup>
 
   <ItemGroup>
