--- a/DotNetMentor.PageMonitor.Application/DotNetMentor.PageMonitor.Application.csproj
+++ b/DotNetMentor.PageMonitor.Application/DotNetMentor.PageMonitor.Application.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="EFCoreSecondLevelCacheInterceptor" Version="4.2.3" />
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.17" />
   </ItemGroup>
