--- a/DotNetMentor.PageMonitor.WebApi/appsettings.Development.json
+++ b/DotNetMentor.PageMonitor.WebApi/appsettings.Development.json
@@ -21,7 +21,10 @@
     "Audience": "https://example.com"
   },
 
-  "CookieSettings" : {
+  "CookieSettings": {
     "Secure": false
-  }
+  },
+
+  "WebAppBaseUrl": "http://localhost:3000",
+  "AdditionalCorsOrigins": []
 }
